# Multiconnect

./: .gitignore  README.md
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  bt_router_stub.cpp  sync_core_stub.cpp
android/app/src/main/java/com/multiconnect/: MainActivity.kt  NativeStubs.kt
docs/: architecture.md  day1-acceptance-evidence.json  day1-baseline-report.md  day1-checklist.md  hardware-inventory.md  hardware-matrix-template.csv  hardware-readiness.md  native-check-run-log.csv  parallel-task-batch.md  phase1-hardware-test-plan.md  phase1-status.md  project-blockers.md  team-alignment.md
native/: CMakeLists.txt
native/include/multiconnect/: beep_generator.h  logging.h  master_ring_buffer.h  sync_engine.h  sync_engine_c_api.h  sync_math.h
native/src/: beep_generator.cpp  master_ring_buffer.cpp  poc_cli.cpp  sync_engine.cpp  sync_engine_c_api.cpp  sync_math.cpp
native/tests/: test_beep_generator.cpp  test_ring_buffer.cpp  test_sync_engine.cpp  test_sync_engine_c_api.cpp  test_sync_math.cpp
scripts/: add_hardware_matrix_entry.py  apply_day1_acceptance_updates.py  archive_native_run_log.py  close_day1_blockers.py  doctor_local_setup.py  generate_phase1_hardware_plan.py  generate_phase1_status_report.py  generate_project_blockers_report.py  run_native_checks.sh  update_day1_baseline_report.py  validate_day1_acceptance_config.py  validate_day1_baseline_report.py  validate_hardware_matrix.py  validate_native_run_log.py  validate_phase1_readiness.py  validate_poc_artifact.py
